# Hackathon-sql-diff

./: .env.example  Cargo.toml  README.md  migration.sql
data/: dev.db
schema/: source.sql  sqlite_init.sql  target.sql
src/: diff_engine.rs  lib.rs  main.rs  reporter.rs  schema_model.rs  sql_dump_parser.rs  sql_generator.rs
src/connectors/: mod.rs  postgres.rs  sqlite.rs
