[package]
name = "hackathon_diff_sql"
version = "0.1.0"
edition = "2024"
description = "Outil de diff de schemas SQL: compare deux bases de donnees (PostgreSQL, SQLite) et genere le script de migration idempotent."
license = "MIT"
repository = "https://github.com/votre-equipe/hackathon-diff-sql"
keywords = ["sql", "migration", "diff", "schema", "postgres"]
categories = ["database", "command-line-utilities"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
